[gd_scene load_steps=5 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0392157, 0.435294, 1, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
double_jump = true

[node name="player_mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.000212908, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0.000212908, 0, 0 )
shape = SubResource( 3 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0867871, 0, 0 )

[node name="Camera_Bone" type="SpringArm" parent="head"]
spring_length = 12.0

[node name="Kamera" type="Camera" parent="head/Camera_Bone"]
current = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="ProgressBar" parent="Control"]
margin_left = 10.0
margin_top = 28.0
margin_right = 167.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_txt" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 14.0
margin_right = -31.0
margin_bottom = 45.0
text = "coin
"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_amount" type="RichTextLabel" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 44.0
margin_right = -31.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Powerup" type="RichTextLabel" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = 499.0
margin_right = -26.0
margin_bottom = 531.0
__meta__ = {
"_edit_use_anchors_": false
}
